fix (icon block): icon alignment issue when align is set to right. Fixes #1206 (#1207)

--- a/src/block/icon/style.scss
+++ b/src/block/icon/style.scss
@@ -7,6 +7,10 @@
 @import "common";
 
 .ugb-icon {
+	&.ugb-icon--v2 {
+		display: flex;
+	}
+
 	.ugb-inner-block {
 		width: auto;
 	}
